--- a/main.ipynb
+++ b/main.ipynb
@@ -1,1 +1,114 @@
-print("Hello")
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coding:utf-8\n",
+    "from __future__ import print_function\n",
+    "import numpy as np\n",
+    "from torch.utils.data import Dataset\n",
+    "from PIL import Image\n",
+    "import argparse\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "import torch.backends.cudnn as cudnn\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "from utils import progress_bar\n",
+    "import os\n",
+    "from torchvision import models\n",
+    "from efficientnet_pytorch import EfficientNet\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "import matplotlib.pyplot as plt\n",
+    "import data_preprocess\n",
+    "from correlation import corr\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "parser = argparse.ArgumentParser(description='PyTorch EfficientNet Training')\n",
+    "parser.add_argument('--lr', default=5e-5, type=float, help='learning rate')\n",
+    "args = parser.parse_args()\n",
+    "\n",
+    "def adjust_learning_rate(optimizer, decay_rate=.5):  \n",
+    "    for param_group in optimizer.param_groups:\n",
+    "        param_group['lr'] = param_group['lr'] * decay_rate\n",
+    "    print(\"changing lr rate\")\n",
+    "        \n",
+    "print('==> Preparing data..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDataset(Dataset):\n",
+    "    def __init__(self, imagesCC,labelsCC,imagesMLO,labelsMLO):\n",
+    "        self.imagesCC = imagesCC\n",
+    "        self.labelsCC = labelsCC\n",
+    "        self.imagesMLO = imagesMLO\n",
+    "        self.labelsMLO = labelsMLO\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        imgCC = torch.Tensor(self.imagesCC[index])\n",
+    "        targetCC = self.labelsCC[index]\n",
+    "        imgMLO = torch.Tensor(self.imagesMLO[index])\n",
+    "        targetMLO = self.labelsMLO[index]\n",
+    "        return imgCC,targetCC,imgMLO,targetMLO\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.imagesCC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input image dimensions\n",
+    "img_rows, img_cols = 256, 256\n",
+    "img_channels = 1\n",
+    "\n",
+    "# the data, shuffled and split between train and test sets\n",
+    "trXMLO, y_trainMLO, teXMLO, y_testMLO, trXCC, y_trainCC, teXCC, y_testCC = data_preprocess.loaddata()\n",
+    "\n",
+    "# Reshape labels\n",
+    "trYMLO = y_trainMLO.reshape((y_trainMLO.shape[0],1))\n",
+    "teYMLO = y_testMLO.reshape((y_testMLO.shape[0],1))\n",
+    "trYCC = y_trainCC.reshape((y_trainCC.shape[0],1))\n",
+    "teYCC = y_testCC.reshape((y_testCC.shape[0],1))\n",
+    "\n",
+    "ratio = trYMLO.sum()*1./trYMLO.shape[0]*1.\n",
+    "\n",
+    "train_len = len(trXMLO)\n",
+    "test_len = len(teXMLO)\n",
+    "print('tr ratio'+str(ratio))\n",
+    "weights = np.array((ratio,1-ratio))\n",
+    "weights = torch.Tensor(weights)\n",
+    "weights = weights.cuda()\n",
+    "\n",
+    "# Reshape and convert to 3-channel\n",
+    "def prepare_images(images):\n",
+    "    images = images.reshape(-1, img_channels, img_rows, img_cols)\n",
+    "    extended = np.zeros((images.shape[0], 3, img_rows, img_cols))\n",
+    "    for i in range(images.shape[0]):\n",
+    "        resized = np.resize(images[i,:,:,:], (img_rows, img_cols))\n",
+    "        extended[i,0,:,:] = resized\n",
+    "        extended[i,1,:,:] = resized\n",
+    "        extended[i,2,:,:] = resized\n",
+    "    return extended.astype('float32')\n",
+    "\n",
+    "X_trainMLO = prepare_images(trXMLO)\n",
+    "X_testMLO = prepare_images(teXMLO)\n",
+    "X_trainCC = prepare_images(trXCC)\n",
+    "X_testCC = prepare_images(teXCC)\n",
+    "\n",
+    "print('X_train
