--- a/densenet169_cbis_ddsm_colab-no-val-loss.ipynb
+++ b/densenet169_cbis_ddsm_colab-no-val-loss.ipynb
@@ -2,7 +2,6 @@
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -164,14 +163,87 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "xk-SP_in5LCz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! mkdir ~/.kaggle"
+      ],
+      "metadata": {
+        "id": "Fm1IOjdp5S8p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! cp /content/drive/MyDrive/Stat_Docs/kaggle.json ~/.kaggle/kaggle.json"
+      ],
+      "metadata": {
+        "id": "zfUpMcEN5ZuE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! chmod 600 ~/.kaggle/kaggle.json"
+      ],
+      "metadata": {
+        "id": "PXJ3dAJX5mD9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! kaggle datasets download -d awsaf49/cbis-ddsm-breast-cancer-image-dataset"
+      ],
+      "metadata": {
+        "id": "TP3kiHBM5oiL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! unzip /content/cbis-ddsm-breast-cancer-image-dataset.zip -d /content/ > /dev/null"
+      ],
+      "metadata": {
+        "id": "gx5I3o755w_p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Rut3CCkW6fY5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# get the current working directory\n",
         "current_working_directory = os.getcwd()\n",
         "\n",
         "# print output to the console\n",
-        "print(current_working_directory)\n",
-        "\n",
-        "# output will look something similar to this on a macOS system\n",
-        "# /Users/dionysialemonaki/Documents/my-projects/python-project"
+        "print(current_working_directory)\n"
       ],
       "metadata": {
         "papermill": {
