--- a/efficient-net-dual-server.ipynb
+++ b/efficient-net-dual-server.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-12 11:55:22.810608: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1749729322.823955  130948 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1749729322.828069  130948 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1749729322.839694  130948 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1749729322.839704  130948 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1749729322.839705  130948 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1749729322.839707  130948 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-06-12 11:55:22.843689: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -56,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +114,7 @@
        "Name: SeriesDescription, Length: 6775, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +302,7 @@
        "[3 rows x 38 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +384,7 @@
        " '/home/swanjohi/dual-view/jpeg/jpeg/1.3.6.1.4.1.9590.100.1.2.247594800112988856209160032211145354590/1-047.jpg')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +404,7 @@
        "184"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +425,7 @@
        " '/home/swanjohi/dual-view/jpeg/jpeg/1.3.6.1.4.1.9590.100.1.2.285138900913160236325681278743831954285/2-080.jpg')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +445,7 @@
        "591266"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +466,7 @@
        " '/home/swanjohi/dual-view/jpeg/jpeg/1.3.6.1.4.1.9590.100.1.2.285138900913160236325681278743831954285/1-081.jpg')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +486,7 @@
        "538226"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +589,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_image_path_mass(dataset):\n",
+    "    for i, img in enumerate(dataset.values):\n",
+    "        img_name = img[11].split(\"/\")[2]\n",
+    "        if img_name in full_mammogram_dict:\n",
+    "            dataset.iloc[i, 11] = full_mammogram_dict[img_name]\n",
+    "\n",
+    "        img_name = img[12].split(\"/\")[2]\n",
+    "        if img_name in cropped_dict:\n",
+    "            dataset.iloc[i, 12] = cropped_dict[img_name]\n",
+    "        \n",
+    "        img_name = img[13].split(\"/\")[2]\n",
+    "        if img_name in roi_mask_dict:\n",
+    "            dataset.iloc[i, 13] = roi_mask_dict[img_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -667,9 +705,9 @@
        "      <td>4</td>\n",
        "      <td>MALIGNANT</td>\n",
        "      <td>4</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_CC/1.3.6.1.4.1.9590...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_CC_1/1.3.6.1.4.1.95...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_CC_1/1.3.6.1.4.1.95...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -684,9 +722,9 @@
        "      <td>4</td>\n",
        "      <td>MALIGNANT</td>\n",
        "      <td>4</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_MLO/1.3.6.1.4.1.959...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_MLO_1/1.3.6.1.4.1.9...</td>\n",
+       "      <td>Mass-Training_P_00001_LEFT_MLO_1/1.3.6.1.4.1.9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -701,9 +739,9 @@
        "      <td>4</td>\n",
        "      <td>BENIGN</td>\n",
        "      <td>3</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Training_P_00004_LEFT_CC/1.3.6.1.4.1.9590...</td>\n",
+       "      <td>Mass-Training_P_00004_LEFT_CC_1/1.3.6.1.4.1.95...</td>\n",
+       "      <td>Mass-Training_P_00004_LEFT_CC_1/1.3.6.1.4.1.95...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -726,22 +764,22 @@
        "2           4     BENIGN         3   \n",
        "\n",
        "                                     image_file_path  \\\n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
+       "0  Mass-Training_P_00001_LEFT_CC/1.3.6.1.4.1.9590...   \n",
+       "1  Mass-Training_P_00001_LEFT_MLO/1.3.6.1.4.1.959...   \n",
+       "2  Mass-Training_P_00004_LEFT_CC/1.3.6.1.4.1.9590...   \n",
        "\n",
        "                             cropped_image_file_path  \\\n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
+       "0  Mass-Training_P_00001_LEFT_CC_1/1.3.6.1.4.1.95...   \n",
+       "1  Mass-Training_P_00001_LEFT_MLO_1/1.3.6.1.4.1.9...   \n",
+       "2  Mass-Training_P_00004_LEFT_CC_1/1.3.6.1.4.1.95...   \n",
        "\n",
        "                                  ROI_mask_file_path  \n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...  \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...  \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...  "
+       "0  Mass-Training_P_00001_LEFT_CC_1/1.3.6.1.4.1.95...  \n",
+       "1  Mass-Training_P_00001_LEFT_MLO_1/1.3.6.1.4.1.9...  \n",
+       "2  Mass-Training_P_00004_LEFT_CC_1/1.3.6.1.4.1.95...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +924,7 @@
        "2  Calc-Training_P_00007_LEFT_CC_1/1.3.6.1.4.1.95...  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -963,9 +1001,9 @@
        "      <td>5</td>\n",
        "      <td>MALIGNANT</td>\n",
        "      <td>5</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_CC/1.3.6.1.4.1.9590.100...</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_CC_1/1.3.6.1.4.1.9590.1...</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_CC_1/1.3.6.1.4.1.9590.1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -980,9 +1018,9 @@
        "      <td>5</td>\n",
        "      <td>MALIGNANT</td>\n",
        "      <td>5</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_MLO/1.3.6.1.4.1.9590.10...</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_MLO_1/1.3.6.1.4.1.9590....</td>\n",
+       "      <td>Mass-Test_P_00016_LEFT_MLO_1/1.3.6.1.4.1.9590....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -997,9 +1035,9 @@
        "      <td>4</td>\n",
        "      <td>MALIGNANT</td>\n",
        "      <td>4</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
-       "      <td>../input/cbis-ddsm-breast-cancer-image-dataset...</td>\n",
+       "      <td>Mass-Test_P_00017_LEFT_CC/1.3.6.1.4.1.9590.100...</td>\n",
+       "      <td>Mass-Test_P_00017_LEFT_CC_1/1.3.6.1.4.1.9590.1...</td>\n",
+       "      <td>Mass-Test_P_00017_LEFT_CC_1/1.3.6.1.4.1.9590.1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1017,22 +1055,22 @@
        "2             mass      ROUND  CIRCUMSCRIBED           4  MALIGNANT         4   \n",
        "\n",
        "                                     image_file_path  \\\n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
+       "0  Mass-Test_P_00016_LEFT_CC/1.3.6.1.4.1.9590.100...   \n",
+       "1  Mass-Test_P_00016_LEFT_MLO/1.3.6.1.4.1.9590.10...   \n",
+       "2  Mass-Test_P_00017_LEFT_CC/1.3.6.1.4.1.9590.100...   \n",
        "\n",
        "                             cropped_image_file_path  \\\n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...   \n",
+       "0  Mass-Test_P_00016_LEFT_CC_1/1.3.6.1.4.1.9590.1...   \n",
+       "1  Mass-Test_P_00016_LEFT_MLO_1/1.3.6.1.4.1.9590....   \n",
+       "2  Mass-Test_P_00017_LEFT_CC_1/1.3.6.1.4.1.9590.1...   \n",
        "\n",
        "                                  ROI_mask_file_path  \n",
-       "0  ../input/cbis-ddsm-breast-cancer-image-dataset...  \n",
-       "1  ../input/cbis-ddsm-breast-cancer-image-dataset...  \n",
-       "2  ../input/cbis-ddsm-breast-cancer-image-dataset...  "
+       "0  Mass-Test_P_00016_LEFT_CC_1/1.3.6.1.4.1.9590.1...  \n",
+       "1  Mass-Test_P_00016_LEFT_MLO_1/1.3.6.1.4.1.9590....  \n",
+       "2  Mass-Test_P_00017_LEFT_CC_1/1.3.6.1.4.1.9590.1...  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
