--- a/AugmentedINBreast_Colab.ipynb
+++ b/AugmentedINBreast_Colab.ipynb
@@ -694,7 +694,29 @@
             "Epoch 6/50\n",
             "95/95 [==============================] - 404s 4s/step - loss: 0.5695 - accuracy: 0.6999 - auc: 0.7201 - precision: 0.7025 - recall: 0.9564 - val_loss: 0.5677 - val_accuracy: 0.6804 - val_auc: 0.7502 - val_precision: 0.6784 - val_recall: 0.9893\n",
             "Epoch 7/50\n",
-            "72/95 [=====================>........] - ETA: 1:33 - loss: 0.5236 - accuracy: 0.7310 - auc: 0.7791 - precision: 0.7362 - recall: 0.9331"
+            "95/95 [==============================] - 398s 4s/step - loss: 0.5213 - accuracy: 0.7315 - auc: 0.7823 - precision: 0.7383 - recall: 0.9292 - val_loss: 0.4852 - val_accuracy: 0.7386 - val_auc: 0.8364 - val_precision: 0.7380 - val_recall: 0.9448\n",
+            "Epoch 8/50\n",
+            "95/95 [==============================] - 408s 4s/step - loss: 0.4495 - accuracy: 0.7866 - auc: 0.8517 - precision: 0.7990 - recall: 0.9102 - val_loss: 0.4246 - val_accuracy: 0.7940 - val_auc: 0.8659 - val_precision: 0.8290 - val_recall: 0.8729\n",
+            "Epoch 9/50\n",
+            "95/95 [==============================] - 401s 4s/step - loss: 0.3690 - accuracy: 0.8346 - auc: 0.9036 - precision: 0.8490 - recall: 0.9159 - val_loss: 0.3608 - val_accuracy: 0.8338 - val_auc: 0.9083 - val_precision: 0.8586 - val_recall: 0.9036\n",
+            "Epoch 10/50\n",
+            "95/95 [==============================] - 402s 4s/step - loss: 0.2908 - accuracy: 0.8732 - auc: 0.9421 - precision: 0.8869 - recall: 0.9294 - val_loss: 0.3121 - val_accuracy: 0.8764 - val_auc: 0.9385 - val_precision: 0.8707 - val_recall: 0.9575\n",
+            "Epoch 11/50\n",
+            "95/95 [==============================] - 398s 4s/step - loss: 0.2258 - accuracy: 0.9058 - auc: 0.9657 - precision: 0.9214 - recall: 0.9394 - val_loss: 0.2439 - val_accuracy: 0.9091 - val_auc: 0.9594 - val_precision: 0.9197 - val_recall: 0.9502\n",
+            "Epoch 12/50\n",
+            "95/95 [==============================] - 402s 4s/step - loss: 0.1813 - accuracy: 0.9265 - auc: 0.9779 - precision: 0.9338 - recall: 0.9583 - val_loss: 0.2125 - val_accuracy: 0.9091 - val_auc: 0.9692 - val_precision: 0.9204 - val_recall: 0.9475\n",
+            "Epoch 13/50\n",
+            "95/95 [==============================] - 403s 4s/step - loss: 0.1318 - accuracy: 0.9464 - auc: 0.9885 - precision: 0.9532 - recall: 0.9673 - val_loss: 0.2073 - val_accuracy: 0.8991 - val_auc: 0.9677 - val_precision: 0.9226 - val_recall: 0.9284\n",
+            "Epoch 14/50\n",
+            "95/95 [==============================] - 399s 4s/step - loss: 0.1079 - accuracy: 0.9599 - auc: 0.9920 - precision: 0.9667 - recall: 0.9738 - val_loss: 0.2019 - val_accuracy: 0.9418 - val_auc: 0.9704 - val_precision: 0.9388 - val_recall: 0.9766\n",
+            "Epoch 15/50\n",
+            "95/95 [==============================] - 402s 4s/step - loss: 0.0932 - accuracy: 0.9656 - auc: 0.9936 - precision: 0.9694 - recall: 0.9795 - val_loss: 0.1783 - val_accuracy: 0.9304 - val_auc: 0.9779 - val_precision: 0.9348 - val_recall: 0.9643\n",
+            "Epoch 16/50\n",
+            "95/95 [==============================] - 406s 4s/step - loss: 0.0724 - accuracy: 0.9737 - auc: 0.9963 - precision: 0.9758 - recall: 0.9852 - val_loss: 0.1545 - val_accuracy: 0.9489 - val_auc: 0.9819 - val_precision: 0.9505 - val_recall: 0.9746\n",
+            "Epoch 17/50\n",
+            "95/95 [==============================] - 398s 4s/step - loss: 0.0539 - accuracy: 0.9815 - auc: 0.9978 - precision: 0.9835 - recall: 0.9889 - val_loss: 0.1413 - val_accuracy: 0.9503 - val_auc: 0.9871 - val_precision: 0.9603 - val_recall: 0.9664\n",
+            "Epoch 18/50\n",
+            "68/95 [====================>.........] - ETA: 1:48 - loss: 0.0472 - accuracy: 0.9846 - auc: 0.9984 - precision: 0.9853 - recall: 0.9917"
           ]
         }
       ],
