--- a/EDA/INBreast/INBreast-EDA.ipynb
+++ b/EDA/INBreast/INBreast-EDA.ipynb
@@ -91,6 +91,35 @@
     {
       "cell_type": "code",
       "source": [
+        "# class balancing using SMOTE technique\n",
+        "import pandas as pd\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "\n",
+        "# Load the dataset\n",
+        "data = pd.read_csv('/home/swanjohi/dual-view/INBreast_DF/INbreast_Release_One/INbreast_DF.csv')\n",
+        "\n",
+        "# Separate features and target variable\n",
+        "X = data.drop('Label', axis=1)\n",
+        "y = data['Label']\n",
+        "\n",
+        "# Apply SMOTE\n",
+        "smote = SMOTE(random_state=42)\n",
+        "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
+        "\n",
+        "# Save the balanced dataset\n",
+        "data_balanced = pd.concat([X_resampled, y_resampled], axis=1)\n",
+        "data_balanced.to_csv('balanced_dataset.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "REyHduWI2T0l"
+      },
+      "id": "REyHduWI2T0l",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# download densenet201\n",
         "# Import TensorFlow and Keras\n",
         "import tensorflow as tf\n",
@@ -103,12 +132,12 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "SU3Cg1s1zJ11",
-        "outputId": "5280d6c2-91e6-4b51-faf6-a55842e0e648",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "SU3Cg1s1zJ11",
+        "outputId": "5280d6c2-91e6-4b51-faf6-a55842e0e648"
       },
       "id": "SU3Cg1s1zJ11",
       "execution_count": 1,
