--- a/EDA/INBreast/INBreast-EDA.ipynb
+++ b/EDA/INBreast/INBreast-EDA.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# SERVER"
+      ],
+      "metadata": {
+        "id": "gIN4iqwz2uxq"
+      },
+      "id": "gIN4iqwz2uxq"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "78104bde-62f6-48b7-a670-c91ffcb7ef2c",
@@ -87,6 +97,16 @@
         "print(f\"Total MLO (ML) views: {mlo_count}\")\n",
         "print(f\"Other/Unclassified: {other_count}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# COLAB"
+      ],
+      "metadata": {
+        "id": "v6L4bauF2qth"
+      },
+      "id": "v6L4bauF2qth"
     },
     {
       "cell_type": "code",
